--- a/03-todo-list/src/App.css
+++ b/03-todo-list/src/App.css
@@ -3,40 +3,74 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+body {
+  background-color: #13091D;
+  color: #fff;
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+h1, h2, h3, h4, h5, h6 {
+  color: #fff;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+  color: #fff;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+button {
+  background-color: #2F1D42;
+  color: #fff;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
 }
-
-.card {
-  padding: 2em;
+button:hover {
+  background-color: #482C65;
 }
-
-.read-the-docs {
-  color: #888;
+input[type="text"], input[type="password"], input[type="email"], input[type="url"], textarea {
+  background-color: #2F213E!important;
+  color: #fff;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  width: 100%;
+  box-sizing: border-box;
+}
+input[type="submit"] {
+  background-color: #2F1D42!important;
+  color: #fff;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+input[type="submit"]:hover {
+  background-color: #482C65;
+}
+ul {
+  text-align: left;
+  padding:0;
+}
+li {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.delete-button {
+  margin-left: 30px;
+}
+.add-button {
+  margin-top: 20px;
 }
